Version 17.45 - 24 June 2016

- diskdrake:
  o keep UUID when formating btrfs (mga#18673)

Version 17.44 - 24 June 2016

- diskdrake:
  o fix preserving UUID when formating jfs/nilfs/xfs
- drakboot:
  o add a "Do not touch ESP or MBR" option (mga#18770)
  o do not offer to pick the disk where to install grub2 on UEFI
  o filter GPT disks w/o a BIOS boot part (mga#18770)
  o warn if grub2 is not installed on MBR/ESP

Version 17.42 - 22 June 2016

- drakboot:
  o add support for crypted grub2 passwords (mga#15930)
  o grub2: do not overwite ESP if not installing on it (mga#15583)
  o grub2: fix setting default entry when in a submenu (mga#18560)

Version 17.41 - 20 June 2016

- drakboot:
  o fix the grub2 post-install check (mga#18739)

Version 17.40 - 20 June 2016

- drakboot:
  o ensure we've the right grub2 flavor (mga#18739)

Version 17.39 - 18 June 2016

- diskdrake:
  o fix ESP tagging in some cases

Version 17.38 - 16 June 2016

- diskdrake:
  o fix offering to create a GRUB_BIOS partition in custom mode (mga#18656)
  o fix inverted test when checking need for a GRUB_BIOS partition (mga#18704)

Version 17.37 - 12 June 2016

- diskdrake:
  o try harder to guess if we need a GRUB_BIOS partition (mga#18656)

Version 17.36 - 11 June 2016

- diskdrake:
  o add a GRUB_BIOS partition if needed (mga#18656)
  o MBR limit really is 2TiB, not 4, so use GPT for disks > 2TiB

Version 17.34 - 6 June 2016

- drakboot:
  o enable to (un)install os-prober (mga#16010, mga#18538)
  o fix reading back last grub2 entry
  o only overwrite GRUB_CMDLINE_LINUX_DEFAULT on first install (mga#18112)
  o only overwrite install.sh when actually installing boot loader (mga#17455)
  o set GRUB_DEFAULT + GRUB_SAVEDEFAULT (mga#9627, mga#16059)
  o stop offering grub legacy & lilo on new installs (mga#18583)
- running commands as user:
  o fix the fallback when the helper didn't provide the real UID (mga#18288)
  o guess the right user after the switch to polkit (mga#18288)
