@@ -1,3 +1,7 @@
+- drakboot:
+  o do not alter /etc/default/grub on kernel updates, only when running
+    drakboot (mga#18783)
+
 Version 17.45 - 24 June 2016
 
 - diskdrake:
